ingress/tls-awx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  namespace: awx
spec:
  tls:
  - hosts:
     - awx.int.demoitlab.com
    secretName: tls-awx-ingress
  rules:
  - host: "awx.int.demoitlab.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: awx-ash-service
            port:
              number: 80
